--- a/functions/functionApp/package.json
+++ b/functions/functionApp/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@kubernetes/client-node": "^1.3.0",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "multer": "^2.0.2",
+    "unzipper": "^0.12.3"
   }
 }
