--- a/functions/kind-config.yaml
+++ b/functions/kind-config.yaml
@@ -3,5 +3,5 @@ apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
   - role: control-plane
     extraMounts:
-      - hostPath: /home/kavishka/function/node
-        containerPath: /functions/node
+      - hostPath: /home/kavishka/function
+        containerPath: /function
